# TrenchDeep

./: .gitignore  Cargo.toml  LICENSE  README.md  commit  test.dot
graph/: goldstein.dot  rosenbrock.dot
src/: lib.rs
src/backend/: device.rs  feature.rs  mod.rs
src/backend/cpu/: core.rs  mod.rs  parallel.rs
src/broadcast/: mod.rs  traits.rs
src/core/: mod.rs  tensor.rs  traits.rs
src/loss/: mod.rs
src/nn/: conv.rs  linear.rs  mod.rs  pooling.rs
src/nn/activation/: functions.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/ops/: arithmetic.rs  mod.rs  traits.rs
src/optimizer/: mod.rs
src/tensor/: broadcast.rs  creation.rs  display.rs  graph.rs  mod.rs  ops.rs
src/tensor/operators/: add.rs  basic.rs  div.rs  functions.rs  matmax.rs  matmul.rs  mod.rs  mul.rs  neg.rs  overload.rs  reshape.rs  sub.rs  sum.rs  topk.rs  transpose.rs  trigonometric.rs  unary.rs
