[package]
name = "MIT"
version = "0.2.0"
edition = "2021"

[features]
enableBackpropagation = [] # 역전파 관련 기능들을 활성화 할경우 사용
enableHigherOrderDifferentiation = ["requiresGrad"] # 고계 미분 관련 기능들을 활성화 할경우 사용 (enableBackpropagation 필요)
enableVisualization = ["enableBackpropagation"] # 시각화 기능을 활성화 할경우 사용 (enableBackpropagation 필요)
requiresGrad = ["enableBackpropagation"] # 기울기의 중간 저장이 필요할 경우 사용 (enableBackpropagation 필요)
debugging = [] # 디버깅이 필요할 경우 사용

[dependencies]
petgraph = "0.8.1"

[profile.dev]
debug = true

[profile.release]
opt-level = 3